--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,8 +1,10 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
+  --vt-c-smoke: #c5c5c5;
   --vt-c-black: #181818;
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
+  --vt-c-divider-normal-1: #565656;
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
 
   --vt-c-accent: #007bff;
