--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,39 +1,9 @@
-@import './base.css';
+/* @import '@/assets/base.css'; */
+@import '@/assets/css/buttons.css';
 
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 1rem;
   font-weight: normal;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-a:hover {
-  color: var(--vt-c-accent);
-}
-
-h1 {
-  font-weight: 900;
-}
-h2 {
-  font-weight: 700;
-}
-
-.icon {
-  width: 25px;
-  height: 25px;
-  fill: var(--vt-c-accent);
-}
-
-.icon:hover {
-  fill: var(--vt-c-accent-hover);
 }
