--- a/src/assets/bootstrap-custom.scss
+++ b/src/assets/bootstrap-custom.scss
@@ -7,6 +7,7 @@ $btn-padding-y: 0.5rem;
 $font-family-base: 'Inter', sans-serif;
 
 @import 'bootstrap/scss/bootstrap';
+@import '@/assets/animations.scss';
 
 .navbar-brand:hover,
 .nav-link:hover {
